# rust-functor

./: Cargo.toml  README.md
src/: isomorphism.rs  lib.rs  parametric.rs
